<resources>
    <string name="app_name">Durian Delivery</string>
    <string name="confirm">Confirmation</string>
    <string name="db_exist_alert">Do you want to delete the previous order?</string>
    <string name="option_yes">Yes&#32;</string>
    <string name="option_no">No</string>
    <string name="register_email">Enter e-mail address</string>
    <string name="register_username">Enter Username</string>
    <string name="register_password">Enter password</string>
    <string name="firstname">Enter First Name</string>
    <string name="lastname">Enter Last Name</string>
    <string name="username">Enter Username</string>
    <string name="re_enter_register_password">Re-enter Password</string>
    <string name="have_account">Already have account?</string>
    <string name="login_button">login</string>
    <string name="new_account">Don\'t have account? sign up</string>
    <string name="forget_password">forget password</string>
    <string name="confirm_button">confirm</string>
    <string name="save_button">save</string>
    <string name="save_button2">save</string>
    <string name="title_activity_main"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>